--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 <body>
   <div class="weather-app">
   <div class="container">
+    <div class="overview">
     <span class="axios"></span>
     <h1 id="city"></h1>
     <ul>
-      <li id="date"></li>
+      <li>Last updated:<span id="date"></span></li>
       <li id="description"></li>
     </ul>
+  </div>
     <div class="row">
       <div class="col-6">
         <img 
