--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/styles.css" />
+  <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,10 +13,10 @@
   <title>Weather App</title>
 </head>
 <body>
-  <div class="weather-app">
   <div class="container">
+    <div class="weather-app-wrapper">
+      <div class="weather-app">
     <div class="overview">
-    <span class="axios"></span>
     <h1 id="city"></h1>
     <ul>
       <li>Last updated:<span id="date"></span></li>
@@ -25,6 +25,7 @@
   </div>
     <div class="row">
       <div class="col-6">
+        <div class="clearfix weather-temperature">
         <img 
           src="https://ssl.gstatic.com/onebox/weather/64/fog.png" 
           alt="Windy"
@@ -32,7 +33,10 @@
         />
         <div class="float-left">
         <strong id="temperature"></strong>
+        <span class="units">°C | <a href="#">°F</a></span>
       </div>
+    </div>
+    </div>
       <div class="col-6">
         <ul>
           <li>
@@ -42,6 +46,7 @@
             Wind: <span id="wind"></span>Km/H
           </li>
         </ul>
+      </div>
       </div>
     </div>
     <small>
