--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <img 
           src="https://ssl.gstatic.com/onebox/weather/64/fog.png" 
           alt="Windy"
-          class="float-left" 
+          class="float-left"
+          id="icon"
         />
         <div class="float-left">
         <strong id="temperature"></strong>
@@ -54,6 +55,7 @@
     </small>
   </div>
   </div>
+  <span id = "axios"></span>
   <script src="src/app.js"></script>
 </body>
 </html>
