--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <a ref="https://github.com/pewphoria/shecodesplusfinalproject">Open-source code</a>, by Caitlin McDonald
     </small>
   </div>
+  </div>
+  </div>
+  </div>
   <span id = "axios"></span>
   <script src="src/app.js"></script>
 </body>
