--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
   <div class="container">
     <div class="weather-app-wrapper">
       <div class="weather-app">
+        <div class="row">
+          <div class="col-9">
+        <input 
+        type="search" 
+        placeholder="What is your city?"
+        class="form-control"
+        >
+      </div>
+      <div class="col-9">
+          <input type="submit"
+          value="Search"
+          >
+        </div>
+        </div>
+        <form id="search-form"></form>
     <div class="overview">
     <h1 id="city"></h1>
     <ul>
