--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
         type="search" 
         placeholder="What is your city?"
         class="form-control"
+        id="city-input"
+        autocomplete="off"
         >
       </div>
-      <div class="col-9">
+      <div class="col-3">
           <input type="submit"
           value="Search"
+          class="btn btn-primary w-100"
           >
         </div>
         </div>
