--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       </div>
     </div>
     </div>
+    </div>
     <small>
       <a ref="https://github.com/pewphoria/shecodesplusfinalproject">Open-source code</a>, by Caitlin McDonald
     </small>
