--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     </div>
     <small>
-      <a ref="https://github.com/pewphoria/shecodesplusfinalproject">Open-source code</a>, by Caitlin McDonald
+      <a ref="https://github.com/pewphoria/shecodesplusfinalproject" alt="0">Open-source code</a>, by Caitlin McDonald
     </small>
   </div>
   <span id = "axios"></span>
