--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         />
         <div class="float-left">
         <strong id="temperature"></strong>
-        <span class="units">°C | <a href="#">°F</a></span>
+        <span class="units">°C | <a href="#" id="fahrenheit-link">°F</a></span>
       </div>
     </div>
     </div>
