--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </div>
         <small>
           <a
-            href="https://github.com/wecodeschool/vanilla-weather-app"
+            href="https://https://github.com/pewphoria/shecodesplusfinalproject"
             target="_blank"
             >Open-source code</a
           >
-          by Matt Delac
+          by Caitlin McDonald
         </small>
       </div>
     </div>
