--- a/index.html
+++ b/index.html
@@ -63,7 +63,25 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-forecast" id="forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thu</div>
+                <img src="http://openweathermap.org/img/wn/01d@2x.png"
+                alt=""
+                width="36"
+                />
+                <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperatures-max">
+                   18° 
+                  </span>
+                  <span class="weather-forecast-temperatures-min">
+                    12°
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
