--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <div class="clearfix weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
-                  <strong id="temperature"></strong
-                  ><span class="units"> °C | °F </span>
+                  <strong id="temperature"></strong>
+                  <span class="units"><a href="#" id="celsius-link" class="active"> °C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
                 </div>
               </div>
             </div>
